force-app/main/default/objects/sumoapp__NotificationStream__e/sumoapp__NotificationStream__e.object-meta.xml
<CustomObject>
    <label>Notification Stream</label>
    <pluralLabel>Notification Stream</pluralLabel>
</CustomObject>