force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Body__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>