force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__EventId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventId__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>