force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Recipient__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>