force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Sender__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Sender__c</fullName>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>