force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__SendTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SendTime__c</fullName>
    <label>Send Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>