force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Subject__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>