force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Type__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>