force-app/main/default/objects/sumoapp__NotificationStream__e/fields/sumoapp__Version__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>